--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <li><a href="./page/news/index.html">News</a></li>
                 <li><a href="./page/esport/index.html">E-Sport</a></li>
                 <li><a href="./page/subscription/index.html">Subscription</a></li>
-                <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
+                <a href="#" id="close"><img src="./Assets/x.png" alt=""></a>
             </ul>
         </div>
         
         <div id="mobile">
-            <i id="bar" class="fa-solid fa-bars"></i>
+            <i id="bar"><img src="./Assets/list.png" alt=""></i>
         </div>
     </nav>
 
